update: updated pom and java doc